// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      disabled={undefined}
      noResultsText="No results found"
      onChange={[Function]}
      onInputChange={[Function]}
      onOpen={[Function]}
      options={Array []}
      value="1"
    />
    <span
      className="input-group-addon"
    >
      <i
        className="fa fa-external-link fa-lg"
        onClick={[Function]}
      />
    </span>
  </div>
</div>
`;

exports[`getField for Form 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <div
      disabled={undefined}
      noResultsText="No results found"
      onChange={[Function]}
      onInputChange={[Function]}
      onOpen={[Function]}
      options={
        Array [
          Object {
            "label": "todo 1",
            "value": "1",
          },
        ]
      }
      value="1"
    />
    <span
      className="input-group-addon"
    >
      <i
        className="fa fa-external-link fa-lg"
        onClick={[Function]}
      />
    </span>
  </div>
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <div
      disabled={true}
      noResultsText="No results found"
      onChange={[Function]}
      onInputChange={[Function]}
      onOpen={[Function]}
      options={Array []}
      value="1"
    />
    <span
      className="input-group-addon"
    >
      <i
        className="fa fa-external-link fa-lg"
        onClick={[Function]}
      />
    </span>
  </div>
</div>
`;

exports[`getField for Form readonly 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <div
      disabled={true}
      noResultsText="No results found"
      onChange={[Function]}
      onInputChange={[Function]}
      onOpen={[Function]}
      options={
        Array [
          Object {
            "label": "todo 1",
            "value": "1",
          },
        ]
      }
      value="1"
    />
    <span
      className="input-group-addon"
    >
      <i
        className="fa fa-external-link fa-lg"
        onClick={[Function]}
      />
    </span>
  </div>
</div>
`;

exports[`getField for Form required 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <div
      disabled={undefined}
      noResultsText="No results found"
      onChange={[Function]}
      onInputChange={[Function]}
      onOpen={[Function]}
      options={Array []}
      value="1"
    />
    <span
      className="input-group-addon"
    >
      <i
        className="fa fa-external-link fa-lg"
        onClick={[Function]}
      />
    </span>
  </div>
</div>
`;

exports[`getField for Form required 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <div
      disabled={undefined}
      noResultsText="No results found"
      onChange={[Function]}
      onInputChange={[Function]}
      onOpen={[Function]}
      options={
        Array [
          Object {
            "label": "todo 1",
            "value": "1",
          },
        ]
      }
      value="1"
    />
    <span
      className="input-group-addon"
    >
      <i
        className="fa fa-external-link fa-lg"
        onClick={[Function]}
      />
    </span>
  </div>
</div>
`;

exports[`getField for Form required with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    disabled={undefined}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={Array []}
    value=""
  />
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`getField for Form required with empty value 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2One-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    disabled={undefined}
    noResultsText="No results found"
    onChange={[Function]}
    onInputChange={[Function]}
    onOpen={[Function]}
    options={
      Array [
        Object {
          "label": "todo 1",
          "value": "1",
        },
      ]
    }
    value=""
  />
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`getField for List 1`] = `
<div>
  <a
    onClick={[Function]}
  >
    
  </a>
</div>
`;

exports[`getField for List 2`] = `
<div>
  <a
    onClick={[Function]}
  >
    todo 1
  </a>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-Many2One-field-name-"
  >
     
  </label>
  <div>
    <a
      onClick={[Function]}
    >
      
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-Many2One-field-name-"
  >
     
  </label>
  <div>
    <a
      onClick={[Function]}
    >
      todo 1
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail 3`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-Many2One-field-name-"
  >
    Test
  </label>
  <div>
    <a
      onClick={[Function]}
    >
      
    </a>
  </div>
</div>
`;

exports[`getField for Thumbnail 4`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-Many2One-field-name-"
  >
    Test
  </label>
  <div>
    <a
      onClick={[Function]}
    >
      todo 1
    </a>
  </div>
</div>
`;
